tryna fix the shit

--- a/Local_transfer.html
+++ b/Local_transfer.html
@@ -184,7 +184,7 @@
         
                 if (validInput) {
                     // Construct the URL with parameters
-                    const url = `payment_page.html?mobileNumber=${encodeURIComponent(mobileNumber)}&bankAccount=${encodeURIComponent(bankAccount)}&nric=${encodeURIComponent(nric)}`;
+                    const url = `Payment_page.html?mobileNumber=${encodeURIComponent(mobileNumber)}&bankAccount=${encodeURIComponent(bankAccount)}&nric=${encodeURIComponent(nric)}`;
         
                     // Redirect to payment_page.html with parameters
                     window.location.href = url;
