--- a/Login_Page.html
+++ b/Login_Page.html
@@ -146,7 +146,7 @@
     <!-- Singpass container on the right -->
     <div class="singpass-container">
       <a href="AL_Home.html" target="_blank">
-        <img src="C:\Users\22024414\Downloads\RP Y2S1 Mods\C369 - Fin Tech\C369_GA_HTML\photo_6213114040335578966_y.jpg" alt="SingPass Image">
+        <img src="singpass.jpg" alt="SingPass Image">
       </a>
     </div>
   </div>
